# cattle_classifier

./: .gitignore  README.md  cattle-classifier.ipynb  cow.py  database.py  dummy_data.csv  main.py  pyproject.toml  tag_ocr.py
models/classifier/: best.pt  best_26n.pt  best_ceid.pt  best_final.pt  last_final.pt
pages/: cow_database.py  cow_inference.py  cow_registration.py  home.py
utils/: database.py  ocr.py  st.py
