[project]
name = "ncai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python-headless",
    "streamlit",
    "torch",
    "torchvision",
    "ultralytics-opencv-headless",
    "st-supabase-connection",
    "pandas",
    "numpy",
    "easyocr",
    "humanize",
    "plotly",
    "lapx",
    "streamlit-extras",
]


#[[tool.uv.index]]
#name = "pytorch"
#url = "https://download.pytorch.org/whl/cpu"
#explicit = true
